[hotfix/header-styling-fix] * save-and-seen adjustment for readability

--- a/src/AppBundle/Resources/assets/css/header.scss
+++ b/src/AppBundle/Resources/assets/css/header.scss
@@ -67,7 +67,9 @@
             padding: 0px;
             border-bottom: 1px dotted #193761;
             height: inherit;
-            width: 143px;
+            width: auto;
+            padding-right: 10px;
+            margin-left: -5px;
         }
 
         .seen-and-saved-li {
